# Graphite

./: .gitignore  CMakeLists.txt  README.md
src/: main.cu  shared.cuh
src/buffer/: buffer.cu  buffer.cuh
src/buffer/kernel/: attributes.cuh  fragment.cuh  kernel.cuh  kernelbuffer.cuh  vertex.cuh
src/graphics/: buffer.cu  buffer.cuh  material.cuh  renderer.cu  renderer.cuh  texture.cu  texture.cuh
src/graphics/kernel/: attributes.cuh  fragment.cuh  kernel.cuh  pbr.cu  pbr.cuh  vertex.cuh
src/kernel/: kernel.cuh
src/math/: geometry.cuh  linalg.cuh  transform.cuh
src/model/: bvh.cu  model.cu  model.cuh
src/scene/: model.cu  model.cuh  scene.cu  scene.cuh
